@@ -7,6 +7,7 @@
 	- preallocate the extra temporary domain_type structures.
 	- too many temp domains returns OK packet so that the resolver 
 	  will recurse and ask us again with the last name in the chain.
+	- fixed bug introduced in preallocation on temp domain numbering.
 
 2 June 2006: Wouter
 	- dname_replace function that does DNAME replace and unit tests.
